# market_sim

./: Cargo.toml  notes_todo.md
Analysis/: Untitled.ipynb
Analysis/.ipynb_checkpoints/: __init__-checkpoint.py
analysis/: __init__.py
data/adapt v1/: agent_info.csv  deaths.csv  price.csv  tasks.csv  utility.csv
data/adapt v2/: agent_info.csv  deaths.csv  price.csv  tasks.csv  trades.csv  utility.csv
data/buy_sell/: agent_info.csv  deaths.csv  price.csv  tasks.csv  utility.csv
data/test_D1S/: deaths.csv  price.csv  tasks.csv
data/test_Fii/: agent_info.csv  deaths.csv  food_consump.csv  price.csv
src/: agent.rs  goods.rs  lib.rs  main.rs  market.rs  record.rs
