[package]
name = "market_sim1"
version = "0.1.0"
authors = ["Joe Howarth <josephehowarth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


failure = "0.1.6"
maplit = "1.0.2"
serde = "1.0.102"
serde_derive = "1.0.102"
csv = "1.1.1"
lazy_static = "1.4.0"
rand = {version= "0.7.2", features=["small_rng"]}
linear-map = "1.2.0"

[dependencies.arrayvec]
version = "0.5.1"
features = ["serde"]
